<resources>
    <string name="app_name">ReserveSisha</string>


    <!-- Sync contents -->
    <string name="emailLogin">Email</string>
    <string name="passwordLogin">Password</string>
    <string name="passwordLogin2">Repeat Password</string>
    <string name="clearRegister">Clear Text</string>
    <string name="register">Registra</string>
    <string name="loginButton">INICIAR SESIÓN</string>
    <string name="registerText">¿TODAVÍA NO ERES USUARIO?</string>
    <!-- Registre -->
    <string name="noms">Nom amb cognoms</string>
    <string name="edat">Inserir edat</string>
    <string name="sexe1">Dona</string>
    <string name="sexe2">Home</string>
    <string name="ciutat">Inserir la vostra ciutat</string>
    <string name="emailRegister">Inserir un email…</string>
    <string name="passwordRegister">Password…</string>
    <string name="passwordRegister2">Torna a repetir el password!</string>
    <!-- Bottom bar navigation Users -->
    <string name="mainUsers">Main</string>
    <string name="manageBooking">Reservas</string>
    <string name="configUsers">Configuracio</string>
    <string name="manageRate">Tarifas</string>
    <string name="manageTables">Taules</string>
    
    <!-- MainAdmin -->
    <string name="titelCreateUsers">Alta Usuaris</string>
    <string name="titelCreateAdmin">Configuracio Admin</string>
    <string name="manageUser">Gestio Usuaris</string>
    <string name="manageBusiness">Gestio Empresa</string>
    <string name="btnAdd">Afegir</string>
    <string name="btnSave">Guardar</string>
    <string name="btnUpdate">Update</string>
    <string name="addNewUser">Crear Usuari</string>
    <string name="numCIF">CIF</string>
    <string name="swLogin">Email and Pass</string>

    <!-- Current User -->
    <string name="titleHomeUser">Empresas</string>




    <string name="nom_reserva">Nom_reserva</string>
    <string name="n_personas">Nº Personas</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="tipo">Tipo</string>
    <string name="direccion">Dirección</string>
    <string name="reservar">Reservar</string>
    <string name="add_rate">Add rate</string>
    <string name="rates">Rates</string>
    <string name="types">Types</string>
    <string name="add_type">add type</string>
    <string name="managetypes">BookingTypes</string>
    <string name="save_or_update">Save or update</string>


</resources>