<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

<data>

</data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.adminUser.manageUsers.configUser.ConfigUsersFragment">

    <EditText
        android:id="@+id/editTextPassAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/passwordLogin"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/editTextMailAuth"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextMailAuth" />

    <EditText
        android:id="@+id/editTextMailAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/emailLogin"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassAuth"
        app:layout_constraintEnd_toEndOf="@+id/titelAltaUsers"
        app:layout_constraintStart_toStartOf="@+id/titelAltaUsers" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMailAuth"
        app:layout_constraintEnd_toStartOf="@+id/editTextMailAuth"
        app:layout_constraintTop_toTopOf="@+id/editTextMailAuth"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:src="@drawable/ic_baseline_lock_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassAuth"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassAuth"
        app:layout_constraintTop_toTopOf="@+id/editTextPassAuth" />

    <Button
        android:id="@+id/btnAddNewUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/btnAdd"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

    <TextView
        android:id="@+id/titelAltaUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/titelCreateUsers"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextMailAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="211dp"
        android:layout_height="41dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddNewUser"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassAuth"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPassAuth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>