<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.access.LoginFragment">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="411dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo_sisha"
            app:layout_constraintBottom_toTopOf="@+id/editTextMailAuth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextPassAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordLogin"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAuthetification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.765" />

        <EditText
            android:id="@+id/editTextMailAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/emailLogin"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassAuth"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassAuth"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextPassAuth" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:layout_constraintBottom_toBottomOf="@+id/editTextMailAuth"
            app:layout_constraintEnd_toStartOf="@+id/editTextMailAuth"
            app:layout_constraintTop_toTopOf="@+id/editTextMailAuth"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:src="@drawable/ic_baseline_lock_24"
            app:layout_constraintBottom_toBottomOf="@+id/editTextPassAuth"
            app:layout_constraintEnd_toStartOf="@+id/editTextPassAuth"
            app:layout_constraintTop_toTopOf="@+id/editTextPassAuth" />

        <Button
            android:id="@+id/btnAuthetification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/loginButton"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />

        <TextView
            android:id="@+id/textBtnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerText"
            android:textColor="@color/buttonColor"
            app:layout_constraintBottom_toTopOf="@+id/btnAuthetification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassAuth" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>