<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal ="16dp"
    android:layout_marginVertical   ="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBookingName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    tools:text="Nombre de la Empresa" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvNameRes"
                        android:layout_width="93dp"
                        android:layout_height="match_parent"
                        android:text="@string/nom_reserva"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/tvNameResContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        tools:text="Descripcio" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvNumPersonas"
                        android:layout_width="93dp"
                        android:layout_height="match_parent"
                        android:text="@string/n_personas"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/tvNumPersonasContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        tools:text="5 personas" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFechaRes"
                        android:layout_width="93dp"
                        android:layout_height="match_parent"
                        android:text="@string/fecha"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/tvFechaResContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        tools:text="24/5/2022" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvHoraRes"
                        android:layout_width="93dp"
                        android:layout_height="match_parent"
                        android:text="@string/hora"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/tvHoraResContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        tools:text="18:00" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTipoRes"
                        android:layout_width="93dp"
                        android:layout_height="match_parent"
                        android:text="@string/tipo"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/tvTipoResContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        tools:text="VIP" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDireccioRes"
                        android:layout_width="93dp"
                        android:layout_height="match_parent"
                        android:text="@string/direccion"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tvDireccioResContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        tools:text="Calle juanito, 15, Terrassa, Barcelona" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tvEditBooking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_edit_24" />

                    <ImageView
                        android:id="@+id/tvDeleteBooking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_delete_24" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>